[package]
name = "acryl"
version = "0.3.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library to work with Acryl blockchain (https://acrylplatform.com)"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deadblackclover/acryl-lib-rust"
repository = "https://github.com/deadblackclover/acryl-lib-rust"
keywords = ["acryl", "blockchain"]

[dependencies]
base58 = "0.1.0"
rand = "0.7.3"

blake2 = "0.7.1"
curve25519-dalek = "1.2.3"
ed25519-dalek = "1.0.0-pre.3"
sha2 = "0.8.0"
sha3 = "0.8.0"