[package]
name = "wavesplatform"
version = "0.2.4"
authors = ["peterz <peterz@rambler.ru>", "DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library to work with Waves blockchain (https://wavesplatform.com)"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-rust/waves-lib-rust"
repository = "https://github.com/waves-rust/waves-lib-rust"
keywords = ["waves", "blockchain"]

[dependencies]
base58 = "0.2.0"
rand = "0.8.5"
tiny-bip39 = "1.0.0"

blake2 = "0.9.2"
curve25519-dalek = "2.1.3"
ed25519-dalek = "1.0.1"
sha2 = "0.8.0"
sha3 = "0.8.0"

reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
